Some about JSON and API

--- a/Chapitre 12 - Créer une API.ipynb
+++ b/Chapitre 12 - Créer une API.ipynb
@@ -1,6 +1,170 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Chapitre 12 - Créer une API\n",
+    "===\n",
+    "\n",
+    "## A ? P ? I ?\n",
+    "\n",
+    "### Quoi ?\n",
+    "\n",
+    "Une API (Application Programming Interface) est un système informatique prévu pour la communication de données ou de fonctions à des services tiers. L'équipe de développement prévoit ainsi un moyen externe de réaliser des transactions depuis l'extérieur sans avoir à accéder au code interne d'un projet ou à ses données au format brut.\n",
+    "\n",
+    "Les exemples d'API sont nombreux et touchent aussi bien le Web que le logiciel et les librairies de développement. Pour donner un exemple, on trouve des APIs servant des données (IIIF et les métadonnées d'image par exemple, OAI PMH et les métadonnées de catalogue, etc.) ou bien même des fonctions telles que Google Translate ([Documentation](https://cloud.google.com/translate/docs/quickstart)) ou d'autres telles que [LemLat](http://cophilab.ilc.cnr.it:8080/LatMorphWebApp/services/complete/arma,cano,domus) qui fournit l'analyse morphologique de mots latins.\n",
+    "\n",
+    "Cependant, toutes les APIs ne sont pas forcément produites pour leur consommation par des tiers. Dans beaucoup de cas, il sera intéressant pour un projet de pouvoir fournir un moyen de communication entre le client et le serveur une fois les données chargées. \n",
+    "\n",
+    "![Autocomplete](images/autocomplete.gif)\n",
+    "\n",
+    "\n",
+    "Un exemple très commun serait l'*autocomplétion* d'un formulaire de recherche. Quand l'utilisateur tape quelques lettres, un script du côté client ira communiquer avec une page de l'API pour récupérer les données sans rafraichir la page actuelle."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Comment ?\n",
+    "\n",
+    "La consommation de données est bien évidemment le point le plus complexe d'une API: on voudra s'arranger un maximum pour que les données fournies soit faciles à extraire. Prenons deux exemples : une page HTML et un fichier JSON qui contiennent les mêmes données.\n",
+    "\n",
+    "![Requête sur une version en HTML](./images/latin.html.png)\n",
+    "\n",
+    "L'XPath correspondant à la deuxième traduction de `cano` est : `/html/body/div[1]/div/section/div/div[2]/ul[3]/li[2]`. On peut boucler sur `/html/body/div[1]/div/section/div/div[2]/ul` puis sur les `li` mais il est impossible, sans expression régulière, de diviser les traductions des analyses.\n",
+    "\n",
+    "![Requête sur une version en JSON](./images/latin.json.png)\n",
+    "\n",
+    "Le chemin JSON correspondant est `[\"results\"][2]` où l'on trouve les analyses en dans une liste telle que `[\"results\"][2][\"analysis\"][0][\"lemmas\"][0][\"lemma\"]` est égal à `cano`. Il est aussi très facile de boucler dessus.\n",
+    "\n",
+    "| Élément de comparaisons | HTML   | JSON   |\n",
+    "| ----------------------- | ------ | ------ |\n",
+    "| Poids                   | 7364 o | 5257 o (Mais avec plus d'informations propres à la requête) |\n",
+    "| Parsage                 | Capable d'échouer si une page web est mal construire dans son header | Très peu probable d'échouer |\n",
+    "| Disponibilités dans les langages | Moyenne (librairies externes souvent) | Élevée |\n",
+    "\n",
+    "Il va s'en dire que, d'abord pour le poids et la facilité de lecture machine, **le JSON est le plus abordable**. Il existe d'autres formats acceptable (XML par exemple) mais pour toute donnée structurée autre que du texte balisé, il est recommandé de passer par du JSON (Sur ce point : *[Mobile Performance testing JSON vs XML (2016)](https://www.infragistics.com/community/blogs/b/torrey-betts/posts/mobile-performance-testing-json-vs-xml), [JSON vs XML: A Comparative Performance Analysis  of Data Exchange Formats](http://ijcsn.org/IJCSN-2014/3-4/JSON-vs-XML-A-Comparative-Performance-Analysis-of-Data-Exchange-Formats.pdf), [JSON ou XML, quel format choisir? ](https://www.scriptol.fr/ajax/json-xml.php)*)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Le gazetteer en données ouvertes\n",
+    "\n",
+    "Nous allons chercher à partager nos données directement avec les utilisateurs. Nous allons prévoir deux visualisations des données : une page de recherche et une page pour un objet particulier.\n",
+    "\n",
+    "### jsonify \n",
+    "\n",
+    "#### Flask et les Response\n",
+    "\n",
+    "Votre premier réflexe sera sûrement d'utiliser **`json.dumps()`**. Cela montre que vous avez compris le cour. Cependant... **cela ne sera pas suffisant.**\n",
+    "\n",
+    "Rappelez-vous, sur le web, une réponse est basée sur trois paramètres :\n",
+    "- les headers\n",
+    "- le code http\n",
+    "- le corps\n",
+    "\n",
+    "Or, si l'on fait `return json.dumps()` nous ne retournons qu'une chaîne de caractères... Mais alors, que faisait `render_template` me demanderez-vous ?\n",
+    "\n",
+    "En fait, `render_template()` ne renvoit pas une chaîne de caractère (c'était prévisible...) mais un objet `Response` qui est constitué d'un corps, d'un code http et d'un headers. Et vu que vous envoyez un template en html, la réponse dit \"bon, le code par défaut, c'est *200* et les headers, on va prévenir que le mimetype du corps est *html*\".\n",
+    "\n",
+    "Et de fait, Flask, pour fonctionner véritablement correctement, a besoin de `Reponse`. Une [`Response`](http://flask.pocoo.org/docs/0.12/api/#response-objects) a 2 paramètres qui nous importent:\n",
+    "- `.headers` qui se comportent comme un dictionnaire\n",
+    "- `.status_code` qui se comportent comme un entier\n",
+    "\n",
+    "de tel manière que l'on peut écrire :\n",
+    "\n",
+    "```python\n",
+    "from flask import Flask, Response\n",
+    "\n",
+    "app = Flask(\"Nom\")\n",
+    "\n",
+    "@app.route(\"/404\")\n",
+    "def erreur_404():\n",
+    "    response = Response(\"Il y a eu une erreur\")\n",
+    "    response.headers[\"content-type\"] = \"text/plain\"\n",
+    "    response.status_code = 404\n",
+    "    return response\n",
+    "```\n",
+    "\n",
+    "ou bien encore\n",
+    "\n",
+    "```python\n",
+    "from flask import Flask, Response\n",
+    "import json\n",
+    "app = Flask(\"Nom\")\n",
+    "\n",
+    "@app.route(\"/du_json\")\n",
+    "def une_route():\n",
+    "    mon_dictionnaire = {\"une_cle\" : \"une valeur\"}\n",
+    "    mon_json = json.dumps(mon_dictionnaire)\n",
+    "    # Juste une autre manière d'écrire ce qui a été écrit au-dessus\n",
+    "    response = Response(response, status=200, mimetype=\"application/json\")\n",
+    "    return response\n",
+    "```\n",
+    "\n",
+    "#### La méthode rapide\n",
+    "\n",
+    "Tout développeur-se étant un-e fainéant-e intelligent-e (ou inversement), l'équipe derrière Flask a ajouté une fonction un peu raccourci pour le même résultat que le dernier exemple : `flask.jsonify()` :\n",
+    "\n",
+    "```python\n",
+    "from flask import Flask, jsonify\n",
+    "import json\n",
+    "app = Flask(\"Nom\")\n",
+    "\n",
+    "@app.route(\"/du_json\")\n",
+    "def une_route():\n",
+    "    mon_dictionnaire = {\"une_cle\" : \"une valeur\"}\n",
+    "    return jsonify(mon_dictionnaire)\n",
+    "```\n",
+    "\n",
+    "et vu que jsonify retourne une `Response`, on peut aussi changer le code d'erreur :\n",
+    "\n",
+    "```python\n",
+    "from flask import Flask, jsonify\n",
+    "import json\n",
+    "app = Flask(\"Nom\")\n",
+    "\n",
+    "@app.route(\"/erreur404\")\n",
+    "def une_route():\n",
+    "    mon_dictionnaire = {\"message\" : \"Vous avez une belle erreur ici !\"}\n",
+    "    response = jsonify(mon_dictionnaire)\n",
+    "    response.status_code = 404\n",
+    "    return response\n",
+    "```\n",
+    "\n",
+    "Plutôt simple non ?\n",
+    "\n",
+    "### Tout n'est pas jsonifiable de base....\n",
+    "\n",
+    "### La page de recherche en JSON\n",
+    "\n",
+    "### L'affichage en GEOJson"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 2
 }
