--- a/Chapitre 12 - Créer une API.ipynb
+++ b/Chapitre 12 - Créer une API.ipynb
@@ -136,13 +136,165 @@
     "    return response\n",
     "```\n",
     "\n",
-    "Plutôt simple non ?\n",
+    "Plutôt simple non ?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tout n'est pas `jsonifiable` de base....\n",
     "\n",
-    "### Tout n'est pas jsonifiable de base....\n",
+    "Nous avons vu jusque là qu'il était facile de convertir dictionnaires, listes, booléens, nombres, `None` et autres types très simple de Python. Qu'en est-il des données plus complexes telles que nous avons récupérées de notre base de données ?\n",
     "\n",
+    "`jsonify` étant basé sur `json.dumps()`, nous pouvons essayer `json.dumps()` sur nos objets :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Place 1>\n"
+     ]
+    }
+   ],
+   "source": [
+    "from modules_cours.gazetteer.modeles.donnees import Place\n",
+    "from modules_cours.gazetteer.app import app\n",
+    "from json import dumps\n",
+    "\n",
+    "data = Place.query.get(1)\n",
+    "print(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "<Place 1> is not JSON serializable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-864ca73489f1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdumps\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/usr/lib/python3.5/json/__init__.py\u001b[0m in \u001b[0;36mdumps\u001b[0;34m(obj, skipkeys, ensure_ascii, check_circular, allow_nan, cls, indent, separators, default, sort_keys, **kw)\u001b[0m\n\u001b[1;32m    228\u001b[0m         \u001b[0mcls\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mindent\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mseparators\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;32mand\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    229\u001b[0m         default is None and not sort_keys and not kw):\n\u001b[0;32m--> 230\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0m_default_encoder\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mencode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    231\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mcls\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    232\u001b[0m         \u001b[0mcls\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mJSONEncoder\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/lib/python3.5/json/encoder.py\u001b[0m in \u001b[0;36mencode\u001b[0;34m(self, o)\u001b[0m\n\u001b[1;32m    196\u001b[0m         \u001b[0;31m# exceptions aren't as detailed.  The list call should be roughly\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    197\u001b[0m         \u001b[0;31m# equivalent to the PySequence_Fast that ''.join() would do.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 198\u001b[0;31m         \u001b[0mchunks\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miterencode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mo\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_one_shot\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    199\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mchunks\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mlist\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtuple\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    200\u001b[0m             \u001b[0mchunks\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mchunks\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/lib/python3.5/json/encoder.py\u001b[0m in \u001b[0;36miterencode\u001b[0;34m(self, o, _one_shot)\u001b[0m\n\u001b[1;32m    254\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkey_separator\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitem_separator\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msort_keys\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    255\u001b[0m                 self.skipkeys, _one_shot)\n\u001b[0;32m--> 256\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0m_iterencode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mo\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    257\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    258\u001b[0m def _make_iterencode(markers, _default, _encoder, _indent, _floatstr,\n",
+      "\u001b[0;32m/usr/lib/python3.5/json/encoder.py\u001b[0m in \u001b[0;36mdefault\u001b[0;34m(self, o)\u001b[0m\n\u001b[1;32m    177\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    178\u001b[0m         \"\"\"\n\u001b[0;32m--> 179\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrepr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mo\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\" is not JSON serializable\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    180\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    181\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mencode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mo\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: <Place 1> is not JSON serializable"
+     ]
+    }
+   ],
+   "source": [
+    "dumps(data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`TypeError: <Place 1> is not JSON serializable` est normalement le retour final. `dump` et `dumps` ne savent pas gérer les objets que vous créez vous-mêmes. Comment faire alors ?\n",
+    "\n",
+    "**La solution est simple:** on prévoit une fonction qui transformera nos objets en dictionnaires, liste, etc. Par exemple :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"longitude\": 37.7018, \"nom\": \"Hippana\", \"description\": \"Ancient settlement in the western part of Sicily, probably founded in the seventh century B.C.\", \"latitude\": 13.4358}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def place_to_json(place):\n",
+    "    return {\n",
+    "        \"nom\": place.place_nom,\n",
+    "        \"description\": place.place_description,\n",
+    "        \"longitude\": place.place_longitude,\n",
+    "        \"latitude\": place.place_latitude\n",
+    "    }\n",
+    "\n",
+    "print(dumps(place_to_json(data)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ultimement, on s'arrangera pour que la fonction soit facilement accessible en la transformant en méthode : \n",
+    "\n",
+    "```python\n",
+    "class Place(db.Model):\n",
+    "    place_id = db.Column(db.Integer, unique=True, nullable=False, primary_key=True, autoincrement=True)\n",
+    "    place_nom = db.Column(db.Text)\n",
+    "    place_description = db.Column(db.Text)\n",
+    "    place_longitude = db.Column(db.Float)\n",
+    "    place_latitude = db.Column(db.Float)\n",
+    "    place_type = db.Column(db.String(45))\n",
+    "    \n",
+    "    def to_dict(self):\n",
+    "        return {\n",
+    "            \"nom\": self.place_nom,\n",
+    "            \"description\": self.place_description,\n",
+    "            \"longitude\": self.place_longitude,\n",
+    "            \"latitude\": self.place_latitude\n",
+    "        }\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### La page de recherche en JSON\n",
     "\n",
-    "### L'affichage en GEOJson"
+    "Pour prévoir plus tard la capacité de créer un script pour faire de l'autocomplétion, nous allons proposer une route d'API permettant de faire une recherche plein texte.\n",
+    "\n",
+    "Le code va être très proche du code de recherche original, simplement nous allons :\n",
+    "- proposer la navigation dans le json (et dans le header)\n",
+    "- proposer le lien vers le résultat dans le Json\n",
+    "\n",
+    "http://www.compciv.org/guides/python/how-tos/creating-proper-url-query-strings/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### L'affichage en GEOJson\n",
+    "\n",
+    "À partir de la documentation donnée ci-après, corriger le code suivant afin de fournir une vue en GeoJson :\n",
+    "\n",
+    "(Dans exemple-17)\n",
+    "```python\n",
+    "@app.route(API_ROUTE+\"/places/<place_id>\")\n",
+    "def api_places_single(place_id):\n",
+    "    try:\n",
+    "        query = Place.query.get(place_id)\n",
+    "        return jsonify(query.to_jsonapi_dict())\n",
+    "    except:\n",
+    "        return Json_404()\n",
+    "```\n",
+    "\n",
+    "- [GeoJson.org](http://geojson.org/)\n",
+    "- [Wikipedia : GeoJson](https://en.wikipedia.org/wiki/GeoJSON)\n",
+    "- [Exemple GeoJson Pleiades](https://pleiades.stoa.org/places/837078212/json)"
    ]
   }
  ],
