--- a/Chapitre 12 - Créer une API.ipynb
+++ b/Chapitre 12 - Créer une API.ipynb
@@ -267,10 +267,126 @@
     "Pour prévoir plus tard la capacité de créer un script pour faire de l'autocomplétion, nous allons proposer une route d'API permettant de faire une recherche plein texte.\n",
     "\n",
     "Le code va être très proche du code de recherche original, simplement nous allons :\n",
-    "- proposer la navigation dans le json (et dans le header)\n",
+    "- proposer la navigation dans le json\n",
     "- proposer le lien vers le résultat dans le Json\n",
     "\n",
-    "http://www.compciv.org/guides/python/how-tos/creating-proper-url-query-strings/"
+    "Pour gérer les différentes routes, nous avons divisé `routes.py` en `routes/general.py` et `routes/api.py`.\n",
+    "\n",
+    "#### api.py\n",
+    "\n",
+    "##### urllib\n",
+    "\n",
+    "URLLib est un package python bien agréable quand il s'agit de travailler sur des URLs. Nous utilisons ici `urllib.parse.urlencode` afin d'encoder des paramètres `GET` via un dictionnaire. On pensera à ajouter `?` devant.\n",
+    "\n",
+    "##### url_for(..., _external=True)\n",
+    "\n",
+    "Le paramètre `_external=True` de `url_for()` permet de générer une URL absolue et non simplement une URL relative.\n",
+    "\n",
+    "\n",
+    "```python\n",
+    "from flask import render_template, request, url_for, jsonify\n",
+    "from urllib.parse import urlencode\n",
+    "\n",
+    "from ..app import app\n",
+    "from ..constantes import LIEUX_PAR_PAGE, API_ROUTE\n",
+    "from ..modeles.donnees import Place\n",
+    "\n",
+    "@app.route(API_ROUTE+\"/places\")\n",
+    "def api_places_browse():\n",
+    "    \"\"\" Route permettant la recherche plein-texte et la navigation classique\n",
+    "\n",
+    "    On s'inspirera de http://jsonapi.org/ faute de pouvoir trouver temps d'y coller à 100%\n",
+    "    \"\"\"\n",
+    "    # q est très souvent utilisé pour indiquer une capacité de recherche\n",
+    "    motclef = request.args.get(\"q\", None)\n",
+    "    page = request.args.get(\"page\", 1)\n",
+    "\n",
+    "    if isinstance(page, str) and page.isdigit():\n",
+    "        page = int(page)\n",
+    "    else:\n",
+    "        page = 1\n",
+    "\n",
+    "    if motclef:\n",
+    "        query = Place.query.filter(\n",
+    "            Place.place_nom.like(\"%{}%\".format(motclef))\n",
+    "        )\n",
+    "    else:\n",
+    "        query = Place.query\n",
+    "\n",
+    "    try:\n",
+    "        resultats = query.paginate(page=page, per_page=LIEUX_PAR_PAGE)\n",
+    "    except Exception:\n",
+    "        return Json_404()\n",
+    "\n",
+    "    dict_resultats = {\n",
+    "        \"links\": {\n",
+    "            \"self\": request.url\n",
+    "        },\n",
+    "        \"data\": [\n",
+    "            place.to_jsonapi_dict()\n",
+    "            for place in resultats.items\n",
+    "        ]\n",
+    "    }\n",
+    "\n",
+    "    if resultats.has_next:\n",
+    "        arguments = {\n",
+    "            \"page\": resultats.next_num\n",
+    "        }\n",
+    "        if motclef:\n",
+    "            arguments[\"q\"] = motclef\n",
+    "        dict_resultats[\"links\"][\"next\"] = url_for(\"api_places_browse\", _external=True)+\"?\"+urlencode(arguments)\n",
+    "\n",
+    "    if resultats.has_prev:\n",
+    "        arguments = {\n",
+    "            \"page\": resultats.prev_num\n",
+    "        }\n",
+    "        if motclef:\n",
+    "            arguments[\"q\"] = motclef\n",
+    "        dict_resultats[\"links\"][\"prev\"] = url_for(\"api_places_browse\", _external=True)+\"?\"+urlencode(arguments)\n",
+    "\n",
+    "    response = jsonify(dict_resultats)\n",
+    "    return response\n",
+    "```\n",
+    "\n",
+    "#### Donnees.py\n",
+    "\n",
+    "```python\n",
+    "from flask import url_for\n",
+    "\n",
+    "class Place(db.Model):\n",
+    "    # ...\n",
+    "\n",
+    "    def to_jsonapi_dict(self):\n",
+    "        \"\"\" It ressembles a little JSON API format but it is not completely compatible\n",
+    "\n",
+    "        :return:\n",
+    "        \"\"\"\n",
+    "        return {\n",
+    "            \"type\": \"place\",\n",
+    "            \"id\": self.place_id,\n",
+    "            \"attributes\": {\n",
+    "                \"name\": self.place_nom,\n",
+    "                \"description\": self.place_description,\n",
+    "                \"longitude\": self.place_longitude,\n",
+    "                \"latitude\": self.place_latitude,\n",
+    "                \"category\": self.place_type\n",
+    "            },\n",
+    "            \"links\": {\n",
+    "                \"self\": url_for(\"lieu\", place_id=self.place_id, _external=True),\n",
+    "                \"json\": url_for(\"api_places_single\", place_id=self.place_id, _external=True)\n",
+    "            },\n",
+    "            \"relationships\": {\n",
+    "                 \"editions\": [\n",
+    "                     author.author_to_json()\n",
+    "                     for author in self.authorships\n",
+    "                 ]\n",
+    "            }\n",
+    "        }\n",
+    "```\n",
+    "\n",
+    "Codes issus de :\n",
+    "- [cours-flask/exemple17/gazetteer/modeles/donnees.py](cours-flask/exemple17/gazetteer/modeles/donnees.py)\n",
+    "- [cours-flask/exemple17/gazetteer/routes/api.py](cours-flask/exemple17/gazetteer/routes/api.py) \n"
    ]
   },
   {
